manifest/simple-quarkus-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-simple-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
