manifest/simple-quarkus-service/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-quarkus-service
  name: simple-quarkus-service
  namespace: argocd-simple-demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simple-quarkus-service
---
