manifest/simple-quarkus-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-quarkus-service
  name: simple-quarkus-service
  namespace: argocd-simple-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: simple-quarkus-service
    weight: 100
